[client] fixed spacing on splash

--- a/frontend/src/Splash.module.css
+++ b/frontend/src/Splash.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 270px;
+  margin-top: -100px;
   gap: 30px;
   animation: fadeIn 1s;
 }
